--- a/package/crds/storage.gcp.upbound.io_buckets.yaml
+++ b/package/crds/storage.gcp.upbound.io_buckets.yaml
@@ -1529,6 +1529,16 @@ spec:
                       When deleting a bucket, this
                       boolean option will delete all contained objects.
                     type: boolean
+                  hierarchicalNamespace:
+                    description: The bucket's hierarchical namespace policy, which
+                      defines the bucket capability to handle folders in logical structure.
+                      Structure is documented below. To use this configuration, uniform_bucket_level_access
+                      must be enabled on bucket.
+                    properties:
+                      enabled:
+                        description: Enables hierarchical namespace for the bucket.
+                        type: boolean
+                    type: object
                   labels:
                     additionalProperties:
                       type: string
@@ -1563,9 +1573,9 @@ spec:
                           properties:
                             age:
                               description: Minimum age of an object in days to satisfy
-                                this condition. If not supplied alongside another
-                                condition and without setting no_age to true, a default
-                                age of 0 will be set.
+                                this condition. Note To set 0 value of age, send_age_if_zero
+                                should be set true otherwise 0 value of age field
+                                will be ignored.
                               type: number
                             createdBefore:
                               description: A date in the RFC 3339 format YYYY-MM-DD.
@@ -1612,17 +1622,6 @@ spec:
                               items:
                                 type: string
                               type: array
-                            noAge:
-                              description: While set true, age value will be omitted
-                                from requests. This prevents a default age of 0 from
-                                being applied, and if you do not have an age value
-                                set, setting this to true is strongly recommended.
-                                When unset and other conditions are set to zero values,
-                                this can result in a rule that applies your action
-                                to all files in the bucket. no_age is deprecated and
-                                will be removed in a future major release. Use send_age_if_zero
-                                instead.
-                              type: boolean
                             noncurrentTimeBefore:
                               description: Relevant only for versioned objects. The
                                 date in RFC 3339 (e.g. 2017-06-13) when the object
@@ -1880,6 +1879,16 @@ spec:
                       When deleting a bucket, this
                       boolean option will delete all contained objects.
                     type: boolean
+                  hierarchicalNamespace:
+                    description: The bucket's hierarchical namespace policy, which
+                      defines the bucket capability to handle folders in logical structure.
+                      Structure is documented below. To use this configuration, uniform_bucket_level_access
+                      must be enabled on bucket.
+                    properties:
+                      enabled:
+                        description: Enables hierarchical namespace for the bucket.
+                        type: boolean
+                    type: object
                   labels:
                     additionalProperties:
                       type: string
@@ -1914,9 +1923,9 @@ spec:
                           properties:
                             age:
                               description: Minimum age of an object in days to satisfy
-                                this condition. If not supplied alongside another
-                                condition and without setting no_age to true, a default
-                                age of 0 will be set.
+                                this condition. Note To set 0 value of age, send_age_if_zero
+                                should be set true otherwise 0 value of age field
+                                will be ignored.
                               type: number
                             createdBefore:
                               description: A date in the RFC 3339 format YYYY-MM-DD.
@@ -1963,17 +1972,6 @@ spec:
                               items:
                                 type: string
                               type: array
-                            noAge:
-                              description: While set true, age value will be omitted
-                                from requests. This prevents a default age of 0 from
-                                being applied, and if you do not have an age value
-                                set, setting this to true is strongly recommended.
-                                When unset and other conditions are set to zero values,
-                                this can result in a rule that applies your action
-                                to all files in the bucket. no_age is deprecated and
-                                will be removed in a future major release. Use send_age_if_zero
-                                instead.
-                              type: boolean
                             noncurrentTimeBefore:
                               description: Relevant only for versioned objects. The
                                 date in RFC 3339 (e.g. 2017-06-13) when the object
@@ -2401,6 +2399,16 @@ spec:
                       When deleting a bucket, this
                       boolean option will delete all contained objects.
                     type: boolean
+                  hierarchicalNamespace:
+                    description: The bucket's hierarchical namespace policy, which
+                      defines the bucket capability to handle folders in logical structure.
+                      Structure is documented below. To use this configuration, uniform_bucket_level_access
+                      must be enabled on bucket.
+                    properties:
+                      enabled:
+                        description: Enables hierarchical namespace for the bucket.
+                        type: boolean
+                    type: object
                   id:
                     type: string
                   labels:
@@ -2437,9 +2445,9 @@ spec:
                           properties:
                             age:
                               description: Minimum age of an object in days to satisfy
-                                this condition. If not supplied alongside another
-                                condition and without setting no_age to true, a default
-                                age of 0 will be set.
+                                this condition. Note To set 0 value of age, send_age_if_zero
+                                should be set true otherwise 0 value of age field
+                                will be ignored.
                               type: number
                             createdBefore:
                               description: A date in the RFC 3339 format YYYY-MM-DD.
@@ -2486,17 +2494,6 @@ spec:
                               items:
                                 type: string
                               type: array
-                            noAge:
-                              description: While set true, age value will be omitted
-                                from requests. This prevents a default age of 0 from
-                                being applied, and if you do not have an age value
-                                set, setting this to true is strongly recommended.
-                                When unset and other conditions are set to zero values,
-                                this can result in a rule that applies your action
-                                to all files in the bucket. no_age is deprecated and
-                                will be removed in a future major release. Use send_age_if_zero
-                                instead.
-                              type: boolean
                             noncurrentTimeBefore:
                               description: Relevant only for versioned objects. The
                                 date in RFC 3339 (e.g. 2017-06-13) when the object
