convert quotaconfigparameter to object
Unsure why the code generation made this example a list instead of an
object. I suppose terraform allows multiple blocks for some resources,
but it doesn't look like a good fit here.

Signed-off-by: Jacob Straszynski <jacob.straszynski@planet.com>

--- a/examples/cloudquotas/v1beta1/quotapreference.yaml
+++ b/examples/cloudquotas/v1beta1/quotapreference.yaml
@@ -13,6 +13,6 @@ spec:
       region: us-east1
     parent: projects/my-project-name
     quotaConfig:
-    - preferredValue: 200
+      preferredValue: 200
     quotaId: CPUS-per-project-region
     service: compute.googleapis.com
