Configure compute.network_firewall_policy_rule and add example
Signed-off-by: Brais Real <brais.real@edreamsodigeo.com>

--- a/examples-generated/compute/v1beta1/networkfirewallpolicyrule.yaml
+++ b/examples-generated/compute/v1beta1/networkfirewallpolicyrule.yaml
@@ -17,7 +17,7 @@ spec:
       matchLabels:
         testing.upbound.io/example-name: basic_network_firewall_policy
     match:
-    - layer4Configs:
+      layer4Configs:
       - ipProtocol: all
       srcAddressGroupsRefs:
       - name: basic_global_networksecurity_address_group
@@ -28,7 +28,9 @@ spec:
       srcRegionCodes:
       - US
       srcSecureTags:
-      - name: tagValues/${google_tags_tag_value.basic_value.name}
+      - nameSelector:
+          matchLabels:
+            testing.upbound.io/example-name: basic_value
       srcThreatIntelligences:
       - iplist-known-malicious-ips
     ruleName: test-rule
