Configure compute.network_firewall_policy_rule and add example
Signed-off-by: Brais Real <brais.real@edreamsodigeo.com>

--- a/examples-generated/compute/v1beta1/networkfirewallpolicyrule.yaml
+++ b/examples-generated/compute/v1beta1/networkfirewallpolicyrule.yaml
@@ -17,7 +17,7 @@ spec:
       matchLabels:
         testing.upbound.io/example-name: basic_network_firewall_policy
     match:
-      layer4Configs:
+    - layer4Configs:
       - ipProtocol: all
       srcAddressGroupsRefs:
       - name: basic_global_networksecurity_address_group
@@ -33,6 +33,7 @@ spec:
             testing.upbound.io/example-name: basic_value
       srcThreatIntelligences:
       - iplist-known-malicious-ips
+    priority: 1000
     ruleName: test-rule
     targetServiceAccounts:
     - my@service-account.com
