Set parameter parent as required
Signed-off-by: Brais Real <brais.real@edreamsodigeo.com>

--- a/package/crds/networksecurity.gcp.upbound.io_addressgroups.yaml
+++ b/package/crds/networksecurity.gcp.upbound.io_addressgroups.yaml
@@ -109,6 +109,7 @@ spec:
                     type: string
                 required:
                 - location
+                - parent
                 type: object
               initProvider:
                 description: |-
