--- a/package/crds/accesscontextmanager.gcp.upbound.io_serviceperimeterresources.yaml
+++ b/package/crds/accesscontextmanager.gcp.upbound.io_serviceperimeterresources.yaml
@@ -440,6 +440,18 @@ spec:
             properties:
               atProvider:
                 properties:
+                  accessPolicyId:
+                    description: The name of the Access Policy this resource belongs
+                      to.
+                    type: string
+                  etag:
+                    description: The perimeter etag is internally used to prevent
+                      overwriting the list of perimeter resources on PATCH calls.
+                      It is retrieved from the same GET perimeter API call that's
+                      used to get the current list of resources. The resource to add
+                      or remove is merged into that list and then this etag is sent
+                      with the PATCH call along with the updated resource list.
+                    type: string
                   id:
                     description: an identifier for the resource with format {{perimeter_name}}/{{resource}}
                     type: string
